<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/tv_home" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_setting"
            android:title="@string/tv_setting" />
        <item
            android:id="@+id/nav_theme"
            android:icon="@drawable/ic_theme"
            android:title="@string/tv_theme" />
        <item
            android:id="@+id/nav_scans"
            android:icon="@drawable/ic_scans"
            android:title="@string/tv_scans" />
    </group>

    <item android:title="Feedback">
        <menu>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_feedback"
                android:title="@string/tv_feedback" />
            <item
                android:id="@+id/updates"
                android:icon="@drawable/ic_updates"
                android:title="@string/tv_updates" />
            <item
                android:id="@+id/about"
                android:icon="@drawable/ic_about"
                android:title="@string/tv_about" />
            <item
                android:id="@+id/exit"
                android:icon="@drawable/ic_exit"
                android:title="@string/tv_exit" />
        </menu>
    </item>

</menu>
